# miro-rust-remote-mcp

./: .env.example  .env.production  .gitignore  CLAUDE.md  CURRENT_STATE.md  Cargo.toml  DEBUGGING.md  Dockerfile  README.md  config.example.json  deploy_scaleway.sh
.claude/: settings.json
.github/workflows/: deploy.yml  release.yml
docs/: SECRET_MANAGEMENT.md  SETUP.md  adding-new-tools.md  claude-code-config.json  claude-desktop-config.json
examples/: MIGRATION_GUIDE.md  builder_pattern_usage.md
planning/: PIVOT-SUMMARY.md  adr-001-oauth2-stateless-architecture.md  adr-002-oauth-resource-server-architecture.md  adr-003-dual-mode-architecture.md  backlog.md  deployment.md  framing.md  story-map.md  user-stories.md
planning/archive/: README.md  REFACTOR-BACKLOG.md  adr-005-resource-server-with-claude-oauth.md
scripts/: access-logs.sh  check-logs.sh  create-scaleway-secrets.sh  create-secrets.sh  deploy-container.sh  deploy.sh  monitor-prod.sh  run-mcp.sh  setup-scaleway-api-key.sh  test-oauth-flow.sh
src/: config.rs  http_server.rs  lib.rs  main.rs  oauth_dcr.rs  oauth_session.rs
src/auth/: cookie_state.rs  cookie_token.rs  mod.rs  oauth.rs  token_store.rs  token_validator.rs  types.rs
src/mcp/: auth_handler.rs  handlers.rs  metadata.rs  mod.rs  protocol.rs  server.rs  tools.rs
src/miro/: builders.rs  client.rs  mod.rs  types.rs
src/oauth/: code_storage.rs  cookie_manager.rs  dcr.rs  endpoints.rs  mod.rs  pkce.rs  proxy_provider.rs  types.rs
tests/: bearer_middleware_test.rs  mcp_protocol_test.rs  mcp_tools_test.rs  oauth_metadata_test.rs  parent_operations.rs  token_validation_test.rs
