[package]
name = "miro-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
rmcp = { version = "0.3", features = ["server", "transport-io", "macros"] }
oauth2 = "4.4"
url = "2.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
ring = "0.17"
base64 = "0.22"
thiserror = "2.0"
anyhow = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
