[package]
name = "miro-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
rmcp = { version = "0.8", features = ["server", "transport-io", "transport-streamable-http-server", "auth", "macros"] }
oauth2 = "4.4"
url = "2.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
ring = "0.17"
base64 = "0.22"
thiserror = "2.0"
anyhow = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
dirs = "5.0"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tower-cookies = { version = "0.10", features = ["signed"] }
cookie = { version = "0.18", features = ["private", "secure"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
serial_test = "3.0"
