[package]
name = "miro-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
thiserror = "2.0"
anyhow = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
chrono = "0.4"
lru = "0.12"
url = "2.5"
hex = "0.4"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Dependencies only needed for stdio-mcp feature (OAuth client, token storage)
rmcp = { version = "0.7", features = ["server", "transport-io", "transport-streamable-http-server", "auth", "macros"], optional = true }
oauth2 = { version = "4.4", optional = true }
ring = { version = "0.17", optional = true }
base64 = { version = "0.22", optional = true }
aes-gcm = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
serial_test = "3.0"

[features]
stdio-mcp = ["rmcp", "oauth2", "ring", "base64", "aes-gcm", "rand", "sha2"]
default = ["stdio-mcp"]
test-utils = []

[[bin]]
name = "miro-mcp-server"
path = "src/main.rs"
required-features = ["stdio-mcp"]

[[bin]]
name = "miro-mcp-http"
path = "src/bin/miro-mcp-http.rs"
required-features = ["stdio-mcp"]

[[bin]]
name = "server"
path = "src/bin/server.rs"
# No required-features - builds without rmcp
